# calculador_hipotecas

./: Makefile  pyproject.toml
src/hipotecas_calculador/api/: fastapi_app.py  models.py  services.py
src/hipotecas_calculador/formulas/: calculador_hipotecas.py
tests/unit/: test_calculador_hipotecas.py  test_services.py
