[tool.poetry]
name = "hipotecas-calculador"
version = "0.1.0"
description = ""
authors = ["Lokixin"]
packages = [{include = "hipotecas_calculador", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.1.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
pytest = "^8.0.0"
requests = "^2.31.0"
selenium = "^4.17.2"
undetected-chromedriver = "^3.5.4"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
ruff = "^0.2.1"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
